# AgentSpeak-AI-voice-agent

./: .dockerignore  .env.template  Caddyfile  Dockerfile  Readme.MD  docker-compose.yml  turnserver.conf
server/: .gitignore  README.md  alembic.ini  config.py  database.py  models.py  pyproject.toml  requirements.txt  server.py  storage.py
server/alembic/: env.py
server/alembic/versions/: 84f45ff4e8ed_baseline.py  b7d2f1a9c3e4_add_campaign_status_values.py  ce2e64605874_add_recording_columns.py
server/services/: agent.py
web/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AddContactDialog.tsx  AiAgentWizard.tsx  ContactDetailDialog.tsx  DataTable.tsx  LogoutButton.tsx  Placeholder.tsx  ProtectedRoute.tsx  StatCard.tsx  Transcript.tsx
web/src/components/campaign/: AnalyticsTab.tsx  ContactsTab.tsx  KanbanBoard.tsx  OverviewTab.tsx
web/src/components/layout/: Sidebar.tsx  Topbar.tsx
web/src/components/ui/: badge.tsx  (+13 more)
web/src/hooks/: useAuth.tsx  useContactDetails.ts  useLiveKitCall.ts  usePolling.ts
web/src/layouts/: DashboardLayout.tsx
web/src/lib/: agentTemplates.ts  campaignDerive.ts  status.ts  transfers.ts  utils.ts
web/src/pages/: Call.tsx  CampaignContactDetails.tsx  CampaignDetails.tsx  Campaigns.tsx  Contacts.tsx  CreateAgent.tsx  Dashboard.tsx  HumanTransfers.tsx  Login.tsx  TestHistory.tsx  TestSessionDetails.tsx  Workflows.tsx
web/src/routes/: nav.ts
web/src/services/: api.ts
web/src/store/: ui.ts
web/src/types/: index.ts
(+1 files in other folders)
