[project]
name = "voice-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # ── App / infra (unchanged from your LiveKit build) ──
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "minio>=7.2.20",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    # ── Pipecat (replaces every livekit* package) ──
    "pipecat-ai[cartesia,deepgram,openai,runner,silero,webrtc,websocket]>=1.3.0",
    "pipecat-vobiz>=0.0.3,<0.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I", "UP"]
